--- a/starter/index.html
+++ b/starter/index.html
@@ -7,6 +7,7 @@
   <title>M4 Challenge</title>
 </head>
 <body>
+  <h1>It was hard ;)</h1>
   <script src="./assets/JS/index.js"></script>
 </body>
 </html>
