--- a/starter/index.html
+++ b/starter/index.html
@@ -7,7 +7,7 @@
   <title>M4 Challenge</title>
 </head>
 <body>
-  <h1>It was hard ;)</h1>
+  <h1 style="text-align:center;">Open the Console to See the Magic ✨! <br> (That was hard! ;))</h1>
   <script src="./assets/JS/index.js"></script>
 </body>
 </html>
